logs/xmlcheck.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/XMLCheck-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xcheck'...
Compiling './lib/python3.5/site-packages/xcheck/__init__.py'...
***   File "./lib/python3.5/site-packages/xcheck/__init__.py", line 27
    print dir()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/boolcheck.py'...
***   File "./lib/python3.5/site-packages/xcheck/boolcheck.py", line 40
    raise self.error, "BoolCheck cannot accept None"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/core.py'...
***   File "./lib/python3.5/site-packages/xcheck/core.py", line 373
    raise self.error, "Cannot use %s as child checker" % child
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/crosscheck.py'...
***   File "./lib/python3.5/site-packages/xcheck/crosscheck.py", line 75
    print key_dict
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/xcheck/datetimecheck.py'...
***   File "./lib/python3.5/site-packages/xcheck/datetimecheck.py", line 93
    raise self.error, "Cannot parse %s as date" % item
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/dev_listcheck.py'...
***   File "./lib/python3.5/site-packages/xcheck/dev_listcheck.py", line 128
    raise self.error, "not enough items in the list"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/dictwrap.py'...
***   File "./lib/python3.5/site-packages/xcheck/dictwrap.py", line 170
    print whenCheck(when)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/infinity.py'...
***   File "./lib/python3.5/site-packages/xcheck/infinity.py", line 16
    def __int__(self): raise ValueError, "Infinity cannot be converted to integer"
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/listcheck.py'...
***   File "./lib/python3.5/site-packages/xcheck/listcheck.py", line 154
    raise self.error, "not enough items in the list"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/loader.py'...
***   File "./lib/python3.5/site-packages/xcheck/loader.py", line 48
    raise XCheckLoadError, "Cannot create checker for %s" % node.tag
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/numbercheck.py'...
***   File "./lib/python3.5/site-packages/xcheck/numbercheck.py", line 118
    raise ValueError, "'%s' not a float value" % item
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/textcheck.py'...
***   File "./lib/python3.5/site-packages/xcheck/textcheck.py", line 142
    raise self.error, "None not allowed as url"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/xcheck/wrap.py'...
***   File "./lib/python3.5/site-packages/xcheck/wrap.py", line 56
    raise ValueError, "%s is not a valid attribute name" % att_name
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
